--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,4 +27,4 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           #kubectl config current-context                                  # Exibe o contexto atualmente configurado. Isso é útil para verificar se o contexto foi definido corretamente.
 
       - name: Deploy to Kubernetes                                      
-        run: kubectl apply -f aplicacao --namespace cdteste           # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado. 
+        run: kubectl apply -f /projeto_teste_maxtrack/aplicacao/ --namespace cdteste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado. 
