--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,5 +26,10 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           echo "AWS_KUBE_CONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
 
+      - name: Debug
+        run: |
+          ls -R
+          ls aplicacao/
+          
       - name: Deploy to Kubernetes                                      
         run: kubectl apply -f aplicacao/ --namespace cdteste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado. 
