--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,3 +33,4 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
        
       - name: Deploy to Kubernetes                                      
         run: kubectl apply -f aplicacao/ --namespace cdteste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado. 
+        working-directory: aplicacao
