--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -25,6 +25,22 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           aws eks update-kubeconfig --region us-east-1 --name eks-teste   #Utiliza o AWS CLI para atualizar o arquivo kubeconfig local com as credenciais e as informações do cluster EKS.
           echo "AWS_KUBE_CONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
+
+      - name: Check PV status
+        run: |
+          PV_STATUS=$(kubectl get pv mysql-pv -o jsonpath='{.status.phase}' --namespace teste)
+          if [ "$PV_STATUS" == "Released" ]; then
+            echo "PV is in 'Released' status. Proceeding with changes..."
+            
+            # Remove claimRef from PV
+            kubectl get pv mysql-pv -o yaml --namespace teste | \
+              sed '/claimRef:/,/uid: /d' | \
+              kubectl apply -f -
+          else
+            echo "PV is not in 'Released' status. Skipping changes."
+          fi
+        env:
+          KUBECONFIG: ${{ github.workspace }}/.kube/config
        
       - name: Deploy to Kubernetes                                      
-        run: kubectl apply -k ./aplicacao-teste/ --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado. 
+        run: kubectl apply -f ./aplicacao-teste/ --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado.
