--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -22,9 +22,7 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
 
       - name: Set up kubectl             # para acessar o cluster Kubernetes no Amazon EKS.
         run: |
-          aws eks --region us-east-1 update-kubeconfig --name eks-teste
-          mkdir -p $HOME/.kube
-          cp $HOME/.kube/config $HOME/.kube/config
+          aws eks update-kubeconfig --region us-east-1 --name eks-teste   #Utiliza o AWS CLI para atualizar o arquivo kubeconfig local com as credenciais e as informações do cluster EKS.
           echo "AWS_KUBE_CONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           
