--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -25,7 +25,23 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           aws eks update-kubeconfig --region us-east-1 --name eks-teste   #Utiliza o AWS CLI para atualizar o arquivo kubeconfig local com as credenciais e as informações do cluster EKS.
           echo "AWS_KUBE_CONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
-
+          
+      - name: Install VPA CRD
+        run: |
+          echo "apiVersion: apiextensions.k8s.io/v1beta1
+          kind: CustomResourceDefinition
+          metadata:
+            name: verticalpodautoscalers.autoscaling.k8s.io
+          spec:
+            group: autoscaling.k8s.io
+            names:
+              kind: VerticalPodAutoscaler
+              listKind: VerticalPodAutoscalerList
+              plural: verticalpodautoscalers
+              singular: verticalpodautoscaler
+            scope: Namespaced
+            version: v1beta2" > vpa-updater-deployment.yaml
+          kubectl apply -f vpa-updater-deployment.yaml
        
       - name: Deploy do PV                                      
         run: kubectl apply -f ./aplicacao-teste/PVs --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado.
