--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -28,20 +28,7 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           
       - name: Install VPA CRD
         run: |
-          echo "apiVersion: apiextensions.k8s.io/v1beta1
-          kind: CustomResourceDefinition
-          metadata:
-            name: verticalpodautoscalers.autoscaling.k8s.io
-          spec:
-            group: autoscaling.k8s.io
-            names:
-              kind: VerticalPodAutoscaler
-              listKind: VerticalPodAutoscalerList
-              plural: verticalpodautoscalers
-              singular: verticalpodautoscaler
-            scope: Namespaced
-            version: v1beta2" > vpa-updater-deployment.yaml
-          kubectl apply -f vpa-updater-deployment.yaml
+          kubectl apply -f https://raw.githubusercontent.com/kubernetes/autoscaler/master/vertical-pod-autoscaler/deploy/manifests/custom-resource-definitions/verticalpodautoscaler.updater.autoscaling.k8s.io.yaml
        
       - name: Deploy do PV                                      
         run: kubectl apply -f ./aplicacao-teste/PVs --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado.
