--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -28,7 +28,7 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           
       - name: Install VPA CRD
         run: |
-          https://github.com/kubernetes/autoscaler/blob/master/vertical-pod-autoscaler/deploy/vpa-beta2-crd.yaml
+          kubectl apply -f https://github.com/kubernetes/autoscaler/blob/master/vertical-pod-autoscaler/deploy/vpa-beta2-crd.yaml
        
       - name: Deploy do PV                                      
         run: kubectl apply -f ./aplicacao-teste/PVs --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado.
