--- a/.github/workflows/appteste.yml
+++ b/.github/workflows/appteste.yml
@@ -4,6 +4,8 @@ on:
   push:                                # Especifica que esse fluxo de trabalho deve ser acionado quando ocorrer um evento de push no repositório.
     branches:                          # Limita a execução do fluxo de trabalho apenas às alterações na branch "main".
       - main
+    paths:
+      - 'aplicacao-teste/**' # Especifica que o workflow deve ser acionado apenas para alterações nos arquivos dentro do diretório 'aplicacao-teste'.
 
 jobs:                                  # Define os trabalhos (jobs) a serem executados no contexto deste fluxo de trabalho.
   deploy:                              # Nome do trabalho que será executado.
@@ -25,10 +27,6 @@ jobs:                                  # Define os trabalhos (jobs) a serem exec
           aws eks update-kubeconfig --region us-east-1 --name eks-teste   #Utiliza o AWS CLI para atualizar o arquivo kubeconfig local com as credenciais e as informações do cluster EKS.
           echo "AWS_KUBE_CONFIG=$HOME/.kube/config" >> $GITHUB_ENV
           echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
-          
-      - name: Install VPA CRD
-        run: |
-          kubectl apply -f ./aplicacao-teste/vpa.yaml
                  
       - name: Deploy do PV                                      
         run: kubectl apply -f ./aplicacao-teste/PVs --namespace teste # aplicando os manifestos Kubernetes para implantar suas aplicações no cluster configurado.
