--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,32 @@
-# Local .terraform directories
+# Ignora todos os conteúdos dentro de diretórios .terraform em qualquer nível.
 **/.terraform/*
 .terraform.lock.hcl
 tfplan
 
-# .tfstate files
+# Ignora arquivos relacionados ao estado do terraform
 errored.tfstate
 *.tfstate
 *.tfstate.*
 !./tfstate-bucket/terraform.tfstate
 !./tfstate-bucket/terraform.tfstate.backup
 
-# Crash log files
+# Ignora arquivos de logs de crash.
 crash.log
 crash.*.log
 
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
+# Ignora arquivos de variáveis Terraform que podem conter informações sensíveis.
 *.tfvars
 *.tfvars.json
 
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
+#Ignora arquivos de override locais.
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
-
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
-
-# Ignore CLI configuration files
+# Ignora arquivos de configuração do Terraform.
 .terraformrc
 terraform.rc
 
-#Ignorar bkps
+#Ignorar diretório
 bkp/
